--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# === Global Ignore ===
+# Ignore semua node_modules di seluruh project (termasuk subfolder)
+**/node_modules/
 
 
-node_modules/.cache/
 
 
 # dependencies
-/node_modules
+cache/
 /.pnp
 .pnp.js
 
