--- a/SIOPS/backend/config/config.json
+++ b/SIOPS/backend/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "siops_db",
+    "database": "simsorop_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
