--- a/SIOPS/backend/package.json
+++ b/SIOPS/backend/package.json
@@ -12,18 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "express-session": "^1.18.1",
     "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
