--- a/SIOPS/frontend/package.json
+++ b/SIOPS/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@heroicons/react": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,12 +13,14 @@
     "framer-motion": "^11.5.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.416.0",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "tw-elements-react": "^1.0.0-alpha-end",
+    "use-debounce": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
