--- a/SIOPS/backend/package.json
+++ b/SIOPS/backend/package.json
@@ -15,6 +15,7 @@
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csv-parse": "^5.6.0",
