--- a/SIOPS/frontend/package.json
+++ b/SIOPS/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.416.0",
     "papaparse": "^5.5.2",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
     "potscss": "^0.0.1",
     "tailwindcss": "^3.4.7"
   }
