--- a/SIOPS/frontend/package.json
+++ b/SIOPS/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
+    "react-tooltip": "^5.28.1",
     "tw-elements-react": "^1.0.0-alpha-end",
     "use-debounce": "^10.0.4",
     "web-vitals": "^2.1.4"
