--- a/SIOPS/frontend/package.json
+++ b/SIOPS/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
@@ -16,6 +17,7 @@
     "lucide-react": "^0.416.0",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.29.0",
@@ -24,7 +26,8 @@
     "react-tooltip": "^5.28.1",
     "tw-elements-react": "^1.0.0-alpha-end",
     "use-debounce": "^10.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
